--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: TheDreamcathcer4
 email: thedreamcatcherteam4@gmail.com
 brand: '@the_dreamcatcher.4'
-headline: Four dreamers with the aspiration of writing
+headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
