--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: thedreamcatcherteam4@gmail.com
 brand: '@the_dreamcatcher.4'
 headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
-  New Site
+  Our Insta Page Website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
 copyright: 2017 TheDreamcatcher4, Inc. All Rights Reserved.
