setup google analitycs tracking id

--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ email: thedreamcatcherteam4@gmail.com
 #phone: +1-800-555-2016
 
 # Tracking
-#googleAnalitycsID: UA-83933844-1
+googleAnalitycsID: UA-99078691-1
 
