--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 # in the templates available like {{ site.myvariable }}.
-title: TheDreamcathcer4
+title: TheDreamcatcher4
 email: thedreamcatcherteam4@gmail.com
 brand: '@the_dreamcatcher.4'
 headline: Four dreamers with a zeal for writing
