--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
   Our Insta Page Website
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
+url: "http://thedreamcatcher4.me" # the base hostname & protocol for your site
 copyright: 2017 TheDreamcatcher4, Inc. All Rights Reserved.
 
 # Build settings
