moving to new username

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: https://thedreamcatcher4.me
 enforce_ssl: thedreamcatcher4.me
 title: TheDreamcatcher4
 email: thedreamcatcherteam4@gmail.com
-brand: '@the_dreamcatcher.4'
+brand: '@thedreamcatcher4'
 headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
   Our Insta Page Website
