--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,13 @@ email: thedreamcatcherteam4@gmail.com
 brand: '@thedreamcatcher4'
 headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
-  Our Insta Page Website
+  thedreamcatcher4 quotes
+  Our Insta Profile Website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
 copyright: 2017 TheDreamcatcher4, Inc. All Rights Reserved.
+
+meta_author: thedreamcatcher4
 
 # Build settings
 markdown: kramdown
