add description and redirect to https in blog

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ googleAnalitycsID: UA-99078691-1
 
 
 # Blog starts here
-title-blog:            TheDreamcatcher4
-tagline:          The Dream Land.
-description-blog:      Describe your website.
+title-blog:            TheDreamcatcher4 Blog
+tagline:          The DreamLand.
+description-blog:      We are the TheDreamcatcher4, This is our blog and we also have an Instagram account where we post some mesmarizing quotes daily.
 canonical: https://thedreamcatcher4.me
 
 # Owner/author information
