--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # in the templates available like {{ site.myvariable }}.
 url: https://thedreamcatcher4.me
 enforce_ssl: thedreamcatcher4.me
-title: TheDreamcatcher4
-email: thedreamcatcherteam4@gmail.com
+title: thedreamcatcher4 quotes
+email: thedreamcatcher4team@gmail.com
 brand: 'thedreamcatcher4'
 headline: Four dreamers with a zeal for writing
 description: > # this means to ignore newlines until "baseurl:"
