update blog title

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ googleAnalitycsID: UA-99078691-1
 
 
 # Blog starts here
-title-blog:            TheDreamcatcher4 Blog
+title-blog:            thedreamcatcher4 Blog
 tagline:          The DreamLand.
 description-blog:      We are the TheDreamcatcher4, This is our blog and we also have an Instagram account where we post some mesmarizing quotes daily.
 canonical: https://thedreamcatcher4.me
