--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ meta_author: thedreamcatcher4
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
+paginate: 5
+paginate_path: blog/page:num
+language: 'en-uk'
 
 # Account ids
 snapwidget: 377775
@@ -26,4 +30,72 @@ snapwidget: 377775
 
 # Tracking
 googleAnalitycsID: UA-99078691-1
+
+# --- Blog starts here ---
+# Website info
+name: 'TheDreamcatcher4 Blog'
+description-blog: "A beautiful narrative written with the world's most elegant publishing platform. The story begins here."
+
+# Author's info
+author: 'Casper McFadden'
+# edit 'categories' in the front matter of every post to match this username
+nickname: casper
+bio: 'A paranormal expert and his daughter bunk in an abandoned house populated by 3 mischievous ghosts and one friendly one.'
+location: 'Maine, USA'
+url: 'http://biomadeira.github.io/jasper/'
+image: 'assets/images/casper.png'
+
+short_url: 'biomadeira.github.io/jasper/'
+disqus: thedreamcatcher4
+# edit baseurl to simply '/' if using as your personal page (instead of a project page)
+baseurl: /
+
+# Permalinks
+permalink: /:title
+# permalink: /author/:username
+# permalink: /tag/:tag
+
+
+# gems and other configs
+gems: [jekyll-paginate]
+exclude: [vendor]
+
+# Additional settings available on the front-matter
+# Site logo in the index.html (as in demo.ghost.io)
+# Author's page cover in _layouts/author.html
+# The same for page.html and tag.html layouts
+# Post's page cover as a per-post basis _posts/...
+# Disqus comments as a per-post basis
+# ...
+
+
+# Settings for builing master branch with travis-ci
+# with jekyll-travis
+
+# Settings for deploy rake task
+# Username and repo of Github repo, e.g.
+# https://github.com/USERNAME/REPO.git
+# username defaults to ENV['GIT_NAME'] used by Travis
+# repo defaults to USERNAME.github.io
+# Branch defaults to "source" for USERNAME.github.io
+# or "master" otherwise
+safe: false
+lsi: false
+username: thedreamcatcher4
+repo: thedreamcatcher4.github.io
+branch: master
+relative_source: ../thedreamcatcher4.github.io/
+destination: ../thedreamcatcher4.github.io-pages/
+production_url:  https://thedreamcatcher4.github.io/
+source_url:      https://github.com/thedreamcatcher4/thedreamcatcher4.github.io/
+
+exclude:
+  - README.md
+  - Rakefile
+  - Gemfile
+  - Gemfile.lock
+  - changelog.md
+  - "*.Rmd"
+  - vendor
+  - .travis.yml
 
