set up https redirect for blog

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ googleAnalitycsID: UA-99078691-1
 # Website info
 name: 'TheDreamcatcher4 Blog'
 description-blog: "A beautiful narrative written with the world's most elegant publishing platform. The story begins here."
+canonical: https://thedreamcatcher4.me
 
 # Author's info
 author: "ganesh"
