fix analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ snapwidget: 377775
 #phone: +1-800-555-2016
 
 # Tracking
-googleAnalitycsID: UA-99078691-1
+google_analytics: UA-99078691-1
 
 # --- Blog starts here ---
 # Website info
