--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-_site
-.sass-cache
+# Jekyll build
+/_site/
 .jekyll-metadata
-.idea
+#Gemfile.lock
+
+# webstorm
+.idea/
+
+# others
+*.swp
+
+# site build
+*.gem
+*.rbc
+.bundle
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+jasper-pages
+vendor
 node_modules
